# chirpy

./: .gitignore  README.md
auto-nounify/: pyproject.toml
openaction/: README.md
openaction/contracts/abi/: Better.json  BetterOpenAction.json
openaction/contracts/src/: Better.sol  BetterOpenAction.sol
openaction/contracts/src/interfaces/: IBetter.sol
openaction/frontend/: package.json
telegram-bot/: bot.py  pyproject.toml
webapp/: package.json
webapp/components/: VerifyWorldId.tsx  login.tsx  verify.tsx  webapp.tsx
webapp/pages/: _app.tsx  _document.tsx  index.tsx  webapp.tsx
